--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^4.4.6",
     "@angular/platform-browser-dynamic": "^4.4.6",
     "@angular/router": "^4.4.6",
+    "angular-local-storage": "^0.7.1",
     "angular2-fontawesome": "^0.9.3",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
